Исправил наименования классов для заголовков, для адреса и для кнопок слайдера

--- a/source/index.html
+++ b/source/index.html
@@ -51,7 +51,7 @@
 
     <section class="promo">
       <div class="promo__wrapper">
-        <h2 class="promo__title heading-secondary heading-primary--m-white">
+        <h2 class="promo__title heading-primary heading-primary--m-white">
           Функциональное питание для котов
         </h2>
         <p class="promo__slogan promo__slogan--m-white">
@@ -92,7 +92,7 @@
 
     <section class="application">
       <div class="application__wrapper">
-        <h2 class="application__title heading-secondary">
+        <h2 class="application__title heading-primary">
           Как это работает
         </h2>
         <ul class="application__list">
@@ -124,7 +124,7 @@
 
     <section class="result">
       <div class="result__wrapper">
-        <h2 class="result__title heading-secondary">Живой пример</h2>
+        <h2 class="result__title heading-primary">Живой пример</h2>
         <p class="result__description">
           Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
           изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
@@ -150,8 +150,8 @@
             <img src="img/cat-after.png" width="251" height="240" alt="Изображение худого кота">
           </div>
           <p class="result__toggles">
-            <button class="toggle__before">Было</button>
-            <button class="toggle__after">Стало</button>
+            <button class="result__toggle-before">Было</button>
+            <button class="result__toggle-after">Стало</button>
           </p>
         </div>
       </div>
@@ -164,7 +164,7 @@
       <div class="contacts__wrapper">
         <b class="contacts__title">Приглашаем к сотрудничеству дилеров!</b>
         <address class="contacts__address">
-          ул. Большая Конюшенная, д. 19/8 <span class="contacts__address--city">Санкт-Петербург</span>
+          ул. Большая Конюшенная, д. 19/8 <span class="contacts__address-city">Санкт-Петербург</span>
         </address>
 
       </div>
