Исправления наименований классов и разметки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -23,17 +23,17 @@
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--bold main-nav__item--current">
+          <li class="main-nav__item">
             <a href="index.html">
               Главная
             </a>
           </li>
-          <li class="main-nav__item main-nav__item--bold">
+          <li class="main-nav__item main-nav__item--current">
             <a>
               Каталог продукции
             </a>
           </li>
-          <li class="main-nav__item main-nav__item--bold">
+          <li class="main-nav__item">
             <a href="form.html">
               Подбор программы
             </a>
@@ -47,13 +47,17 @@
 
     <h1 class="heading-primary">Каталог продукции</h1>
 
-    <section class="catalog-product">
-      <ul class="catalog-product__list">
-        <li class="catalog-product__item">
-          <h3 class="catalog-product__item-title">Cat Energy pro 500 г</h3>
-          <img class="catalog-product__item-image" src="img/product/chicken-mimi-m.png" width="68" height="86"
-            alt="Изображение товара со вкусом курицы в маленькой упаковке из стаканчика желто-оранжевой расцветки">
-          <table class="catalog-product__item-parameter">
+    <section class="catalog">
+      <ul class="catalog__list">
+        <li class="catalog__item product">
+          <a class="product__title" href="#">
+            <h3>Cat Energy pro 500 г</h3>
+          </a>
+          <a class="product__image" href="#">
+            <img src="img/product/chicken-mimi-m.png" width="68" height="86"
+              alt="Изображение товара со вкусом курицы в маленькой упаковке из стаканчика желто-оранжевой расцветки">
+          </a>
+          <table class="product__parameters">
             <tr>
               <td>Масса</td>
               <td>500 г</td>
@@ -67,13 +71,17 @@
               <td>700 Р.</td>
             </tr>
           </table>
-          <a class="catalog-product__item-button button" href="#">Заказать</a>
+          <a class="product__button button" href="#">Заказать</a>
         </li>
-        <li class="catalog-product__item">
-          <h3 class="catalog-product__item-title">Cat Energy pro 1000 г</h3>
-          <img class="catalog-product__item-image" src="img/product/chicken-max-m.png" width="84" height="101"
-            alt="Изображение товара со вкусом курицы в большой упаковке из стаканчика желто-оранжевой расцветки">
-          <table class="catalog-product__item-parameter">
+        <li class="catalog__item product">
+          <a class="product__title" href="#">
+            <h3>Cat Energy pro 1000 г</h3>
+          </a>
+          <a class="product__image" href="#">
+            <img src="img/product/chicken-max-m.png" width="84" height="101"
+              alt="Изображение товара со вкусом курицы в большой упаковке из стаканчика желто-оранжевой расцветки">
+          </a>
+          <table class="product__parameters">
             <tr>
               <td>Масса</td>
               <td>1000 г</td>
@@ -87,13 +95,17 @@
               <td>1000 Р.</td>
             </tr>
           </table>
-          <a class="catalog-product__item-button button" href="#">Заказать</a>
+          <a class="product__button button" href="#">Заказать</a>
         </li>
-        <li class="catalog-product__item">
-          <h3 class="catalog-product__item-title">Cat Energy pro 500 г</h3>
-          <img class="catalog-product__item-image" src="img/product/fish-mini-m.png" width="68" height="78"
-            alt="Изображение товара со вкусом рыбы в маленькой упаковке из стаканчика зелёной расцветки">
-          <table class="catalog-product__item-parameter">
+        <li class="catalog__item product">
+          <a class="product__title" href="#">
+            <h3>Cat Energy pro 500 г</h3>
+          </a>
+          <a class="product__image" href="#">
+            <img src="img/product/fish-mini-m.png" width="68" height="78"
+              alt="Изображение товара со вкусом рыбы в маленькой упаковке из стаканчика зелёной расцветки">
+          </a>
+          <table class="product__parameters">
             <tr>
               <td>Масса</td>
               <td>500 г</td>
@@ -107,13 +119,17 @@
               <td>700 Р.</td>
             </tr>
           </table>
-          <a class="catalog-product__item-button button" href="#">Заказать</a>
+          <a class="product__button button" href="#">Заказать</a>
         </li>
-        <li class="catalog-product__item">
-          <h3 class="catalog-product__item-title">Cat Energy pro 1000 г</h3>
-          <img class="catalog-product__item-image" src="img/product/fish-max-m.png" width="84" height="101"
-            alt="Изображение товара со вкусом рыбы в большой упаковке из стаканчика зелёной расцветки">
-          <table class="catalog-product__item-parameter">
+        <li class="catalog__item product">
+          <a class="product__title" href="#">
+            <h3>Cat Energy pro 1000 г</h3>
+          </a>
+          <a class="product__image" href="#">
+            <img src="img/product/fish-max-m.png" width="84" height="101"
+              alt="Изображение товара со вкусом рыбы в большой упаковке из стаканчика зелёной расцветки">
+          </a>
+          <table class="product__parameters">
             <tr>
               <td>Масса</td>
               <td>1000 г</td>
@@ -127,13 +143,17 @@
               <td>1000 Р.</td>
             </tr>
           </table>
-          <a class="catalog-product__item-button button" href="#">Заказать</a>
+          <a class="product__button button" href="#">Заказать</a>
         </li>
-        <li class="catalog-product__item">
-          <h3 class="catalog-product__item-title">Cat Energy slim 500 г</h3>
-          <img class="catalog-product__item-image" src="img/product/buckwheat-mini-m.png" width="68" height="78"
-            alt="Изображение товара со вкусом гречки в маленькой упаковке из стаканчика сине-голубой расцветки">
-          <table class="catalog-product__item-parameter">
+        <li class="catalog__item product">
+          <a class="product__title" href="#">
+            <h3>Cat Energy slim 500 г</h3>
+          </a>
+          <a class="product__image" href="#">
+            <img src="img/product/buckwheat-mini-m.png" width="68" height="78"
+              alt="Изображение товара со вкусом гречки в маленькой упаковке из стаканчика сине-голубой расцветки">
+          </a>
+          <table class="product__parameters">
             <tr>
               <td>Масса</td>
               <td>500 г</td>
@@ -147,13 +167,17 @@
               <td>400 Р.</td>
             </tr>
           </table>
-          <a class="catalog-product__item-button button" href="#">Заказать</a>
+          <a class="product__button button" href="#">Заказать</a>
         </li>
-        <li class="catalog-product__item">
-          <h3 class="catalog-product__item-title">Cat Energy slim 1000 г</h3>
-          <img class="catalog-product__item-image" src="img/product/buckwheat-max-m.png" width="84" height="100"
-            alt="Изображение товара со вкусом гречки в большой упаковке из стаканчика сине-голубой расцветки">
-          <table class="catalog-product__item-parameter">
+        <li class="catalog__item product">
+          <a class="product__title" href="#">
+            <h3>Cat Energy slim 1000 г</h3>
+          </a>
+          <a class="product__image" href="#">
+            <img src="img/product/buckwheat-max-m.png" width="84" height="100"
+              alt="Изображение товара со вкусом гречки в большой упаковке из стаканчика сине-голубой расцветки">
+          </a>
+          <table class="product__parameters">
             <tr>
               <td>Масса</td>
               <td>1000 г</td>
@@ -167,13 +191,17 @@
               <td>700 Р.</td>
             </tr>
           </table>
-          <a class="catalog-product__item-button button" href="#">Заказать</a>
+          <a class="product__button button" href="#">Заказать</a>
         </li>
-        <li class="catalog-product__item">
-          <h3 class="catalog-product__item-title">Cat Energy slim 500 г</h3>
-          <img class="catalog-product__item-image" src="img/product/rice-mini-m.png" width="72" height="84"
-            alt="Изображение товара со вкусом риса в маленькой упаковке из стаканчика сиреневой расцветки">
-          <table class="catalog-product__item-parameter">
+        <li class="catalog__item product">
+          <a class="product__title" href="#">
+            <h3>Cat Energy slim 500 г</h3>
+          </a>
+          <a class="product__image" href="#">
+            <img src="img/product/rice-mini-m.png" width="72" height="84"
+              alt="Изображение товара со вкусом риса в маленькой упаковке из стаканчика сиреневой расцветки">
+          </a>
+          <table class="product__parameters">
             <tr>
               <td>Масса</td>
               <td>500 г</td>
@@ -187,12 +215,12 @@
               <td>500 Р.</td>
             </tr>
           </table>
-          <a class="catalog-product__item-button button" href="#">Заказать</a>
+          <a class="product__button button" href="#">Заказать</a>
         </li>
-        <li class="catalog-product__item">
-          <h3 class="catalog-product__item-title">Показать еще 100500 товаров</h3>
-          <p class="catalog-product__item-text">На самом деле вкусов гораздо больше!</p>
-          <a class="catalog-product__item-button catalog-product__item-button--all button" href="#">Показать все</a>
+        <li class="catalog__item product">
+          <h3 class="product__title">Показать еще 100500 товаров</h3>
+          <p class="product__cart-all-text">На самом деле вкусов гораздо больше!</p>
+          <a class="product__button product__button--all button" href="#">Показать все</a>
         </li>
       </ul>
     </section>
