--- a/source/index.html
+++ b/source/index.html
@@ -23,17 +23,17 @@
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--bold main-nav__item--current">
+          <li class="main-nav__item main-nav__item--current">
             <a>
               Главная
             </a>
           </li>
-          <li class="main-nav__item main-nav__item--bold">
+          <li class="main-nav__item">
             <a href="catalog.html">
               Каталог продукции
             </a>
           </li>
-          <li class="main-nav__item main-nav__item--bold">
+          <li class="main-nav__item">
             <a href="form.html">
               Подбор программы
             </a>
