--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page__body">
@@ -255,13 +259,12 @@
           <td><a class="additional-products__button button" href="#">Заказать</a></td>
         </tr>
       </table>
-    </section>
 
-    <!-- Бонус -->
+      <!-- Бонус -->
+      <div class="additional-products__bonus">
+        <a class="additional-products__bonus-link" href="#">Закажите все и получите чехол для кота в подарок!</p>
+      </div>
 
-    <section class="bonus">
-      <h2 class="visually-hidden">Бонус</h2>
-      <p class="bonus__text">Закажите все и получите чехол для кота в подарок!</p>
     </section>
 
     <!-- Адрес -->
