--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,9 +4,6 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -54,7 +51,7 @@
     <section class="catalog">
       <ul class="catalog__list">
         <li class="catalog__item product">
-          <a class="product__title" href="#">
+          <a class="product__title product__title--width" href="#">
             <h3>Cat Energy pro 500 г</h3>
           </a>
           <a class="product__image" href="#">
@@ -78,7 +75,7 @@
           <a class="product__button button" href="#">Заказать</a>
         </li>
         <li class="catalog__item product">
-          <a class="product__title" href="#">
+          <a class="product__title product__title--width" href="#">
             <h3>Cat Energy pro 1000 г</h3>
           </a>
           <a class="product__image" href="#">
@@ -102,7 +99,7 @@
           <a class="product__button button" href="#">Заказать</a>
         </li>
         <li class="catalog__item product">
-          <a class="product__title" href="#">
+          <a class="product__title product__title--width" href="#">
             <h3>Cat Energy pro 500 г</h3>
           </a>
           <a class="product__image" href="#">
@@ -126,7 +123,7 @@
           <a class="product__button button" href="#">Заказать</a>
         </li>
         <li class="catalog__item product">
-          <a class="product__title" href="#">
+          <a class="product__title product__title--width" href="#">
             <h3>Cat Energy pro 1000 г</h3>
           </a>
           <a class="product__image" href="#">
@@ -150,7 +147,7 @@
           <a class="product__button button" href="#">Заказать</a>
         </li>
         <li class="catalog__item product">
-          <a class="product__title" href="#">
+          <a class="product__title product__title--width" href="#">
             <h3>Cat Energy slim 500 г</h3>
           </a>
           <a class="product__image" href="#">
@@ -174,7 +171,7 @@
           <a class="product__button button" href="#">Заказать</a>
         </li>
         <li class="catalog__item product">
-          <a class="product__title" href="#">
+          <a class="product__title product__title--width" href="#">
             <h3>Cat Energy slim 1000 г</h3>
           </a>
           <a class="product__image" href="#">
@@ -198,7 +195,7 @@
           <a class="product__button button" href="#">Заказать</a>
         </li>
         <li class="catalog__item product">
-          <a class="product__title" href="#">
+          <a class="product__title product__title--width" href="#">
             <h3>Cat Energy slim 500 г</h3>
           </a>
           <a class="product__image" href="#">
@@ -222,8 +219,10 @@
           <a class="product__button button" href="#">Заказать</a>
         </li>
         <li class="catalog__item product">
-          <h3 class="product__title">Показать еще 100500 товаров</h3>
-          <p class="product__cart-all-text">На самом деле вкусов гораздо больше!</p>
+          <a class="product__title product__title--all">
+            <h3>Показать еще 100500 товаров</h3>
+          </a>
+          <p class="product__parameters product__parameters--all">На самом деле вкусов гораздо больше!</p>
           <a class="product__button product__button--all button" href="#">Показать все</a>
         </li>
       </ul>
@@ -262,7 +261,7 @@
 
       <!-- Бонус -->
       <div class="additional-products__bonus">
-        <a class="additional-products__bonus-link" href="#">Закажите все и получите чехол для кота в подарок!</p>
+        <a class="additional-products__bonus-link" href="#">Закажите все и получите чехол для кота в подарок!</a>
       </div>
 
     </section>
@@ -276,7 +275,6 @@
         <address class="contacts__address">
           ул. Большая Конюшенная, д. 19/8 <span class="contacts__address-city">Санкт-Петербург</span>
         </address>
-
       </div>
     </section>
 
